--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -17,7 +17,7 @@ body {
 
 .content-sidebar {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .content-sidebar > *:nth-child(1) {
@@ -28,6 +28,72 @@ body {
   flex: 1 1 32%;
   height: 100%;
   background: #2f3136;
+}
+#app {
+  text-align: center;
+
+  #image-wrapper {
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: relative;
+  }
+  @media only screen and(min-width:1920px) {
+    #image-wrapper {
+      width: 960px;
+      height: 540px;
+    }
+  }
+  @media only screen and(max-width:1920px) {
+    #image-wrapper {
+      width: 960px;
+      height: 540px;
+    }
+  }
+  @media only screen and(max-width:1600px) {
+    #image-wrapper {
+      width: 800px;
+      height: 450px;
+    }
+  }
+  @media only screen and(max-width:1366px) {
+    #image-wrapper {
+      width: 680px;
+      height: 384px;
+    }
+  }
+  @media only screen and(max-width:1024px) {
+    #image-wrapper {
+      width: 512px;
+      height: 384px;
+    }
+  }
+
+  #label-bar {
+    float: right;
+    margin-right: 50px;
+    width: 220px;
+
+    ul {
+      padding: 0;
+
+      li {
+        list-style-type: none;
+        padding: 8px 16px;
+
+        &.active {
+          background-color: lightblue;
+        }
+
+        a {
+          cursor: pointer;
+          display: inline-block;
+          margin-left: 4px;
+          font-weight: bold;
+          color: red;
+        }
+      }
+    }
+  }
 }
 
 .pages-header {
