--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,6 +4,7 @@ html,
 body {
   font-family: "Roboto", sans-serif;
   background: #393a3f;
+  height: 100%;
 }
 
 .flex-col {
@@ -30,11 +31,10 @@ body {
   background: #2f3136;
 }
 #app {
-  text-align: center;
-
+  padding: 0 4em;
   #image-wrapper {
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: contain;
     position: relative;
   }
   @media only screen and(min-width:1920px) {
@@ -64,7 +64,7 @@ body {
   @media only screen and(max-width:1024px) {
     #image-wrapper {
       width: 512px;
-      height: 384px;
+      height: 288px;
     }
   }
 
