--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,173 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@400&display=swap");
-
-html,
-body {
-  font-family: "Roboto", sans-serif;
-  background: #393a3f;
-  height: 100%;
-}
-
-.flex-col {
-  flex-direction: column;
-  display: flex;
-}
-.flex-row {
-  flex-direction: row;
-  display: flex;
-}
-
-.content-sidebar {
-  display: flex;
-}
-
-.content-sidebar > *:nth-child(1) {
-  flex: 1 1 68%;
-}
-
-.content-sidebar > *:nth-child(2) {
-  flex: 1 1 32%;
-  height: 100%;
-  background: #2f3136;
-}
-#app {
-  padding: 0 4em;
-  #image-wrapper {
-    background-repeat: no-repeat;
-    background-size: contain;
-    position: relative;
-  }
-  @media only screen and(min-width:1920px) {
-    #image-wrapper {
-      width: 960px;
-      height: 540px;
-    }
-  }
-  @media only screen and(max-width:1920px) {
-    #image-wrapper {
-      width: 960px;
-      height: 540px;
-    }
-  }
-  @media only screen and(max-width:1600px) {
-    #image-wrapper {
-      width: 800px;
-      height: 450px;
-    }
-  }
-  @media only screen and(max-width:1366px) {
-    #image-wrapper {
-      width: 680px;
-      height: 384px;
-    }
-  }
-  @media only screen and(max-width:1024px) {
-    #image-wrapper {
-      width: 512px;
-      height: 288px;
-    }
-  }
-
-  #label-bar {
-    float: right;
-    margin-right: 50px;
-    width: 220px;
-
-    ul {
-      padding: 0;
-
-      li {
-        list-style-type: none;
-        padding: 8px 16px;
-
-        &.active {
-          background-color: lightblue;
-        }
-
-        a {
-          cursor: pointer;
-          display: inline-block;
-          margin-left: 4px;
-          font-weight: bold;
-          color: red;
-        }
-      }
-    }
-  }
-}
-
-.pages-header {
-  font-size: 30px;
-  font-weight: bold;
-  color: #fff;
-}
-
-.history-sidebar {
-  background: #fff;
-  max-width: 300px;
-  width: 280px;
-  height: 100vh;
-}
-
-.document-crop {
-  background: #2d7fcb;
-  color: white;
-  padding: 0.5em 1em;
-  font-size: 20px;
-}
-
-.description {
-  padding: 1em 2em;
-  color: white;
-}
-
-.description-crop {
-  background: #fff;
-  padding: 0.5em 1em;
-  font-size: 20px;
-}
-
-.sub-header-crop {
-  color: #918fd1;
-  font-size: 20px;
-  padding: 0.5em 1em;
-}
-.header-crop {
-  padding: 1em;
-  width: 100%;
-  flex-wrap: nowrap;
-  background: #d15eff;
-}
-.circle {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #fff;
-  margin: 0 2px;
-  box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-.header {
-  font-size: 24px;
-  font-weight: bold;
-  color: white;
-}
-
-@media only screen and(max-width:1000px) {
-  .flex-container {
-    width: 100%;
-    padding: 0 12px;
-  }
-}
-
-@media only screen and(max-width:1000px) {
-  .history-sidebar {
-    display: none;
-  }
-}
-@media only screen and(min-width:1000px) {
-  .flex-container {
-    max-width: 1000px;
-    width: 100%;
-    padding: 0 12px;
-  }
-}
+// app global css in SCSS form
