--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,7 +3,7 @@
 html,
 body {
   font-family: "Roboto", sans-serif;
-  background: #393a3f;
+  background: #F5F5F5;
   height: 100%;
 }
 
@@ -50,7 +50,7 @@ body {
 .content-sidebar > *:nth-child(2) {
   flex: 1 1 32%;
   height: 100%;
-  background: #2f3136;
+  background: #ffffff;
 }
 #app {
   padding: 0 4em;
@@ -121,7 +121,7 @@ body {
 .pages-header {
   font-size: 30px;
   font-weight: bold;
-  color: #fff;
+  color: #3d3142;
 }
 
 .history-sidebar {
