--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,7 +3,7 @@
 html,
 body {
   font-family: "Roboto", sans-serif;
-  background: #F5F5F5;
+  background: #f5f5f5;
   height: 100%;
 }
 
@@ -24,19 +24,57 @@ body {
   color: rgba(118, 114, 114, 1);
 }
 
+.title-font {
+  font-size: 2em;
+  font-weight: 500;
+  margin: 10px 0;
+}
+
 .font-style {
-  font-size: 16px;
-  align-items: Left;
-  min-width: 200px;
-  margin: 1em 0;
+  font-size: 1em;
+  white-space: nowrap;
+  margin: 5px 0;
 }
 
 .the-box {
   border: solid 1px #d15eff;
   background: white;
-  margin: 2em 0 0 0;
   width: 100%;
-  max-width: 50em;
+  padding: 4vw;
+}
+
+.stat-table {
+  width: 100%;
+}
+
+@media only screen and(min-width:500px) {
+  .title-font {
+    font-size: 1em;
+  }
+  .the-box {
+    padding: 1em 2em;
+    max-width: 500px;
+  }
+  .stat-table {
+    max-width: 500px;
+  }
+}
+
+@media only screen and(max-width:500px) {
+  .eng {
+    display: none;
+  }
+  .font-style {
+    font-size: 0.5em;
+  }
+  .stat-table {
+    max-width: 450px;
+    width: 100%;
+  }
+}
+
+.main-sec {
+  gap: 1em;
 }
 
 .content-sidebar {
@@ -170,27 +208,21 @@ body {
 }
 
 .header {
-  font-size: 24px;
+  font-size: 1.5em;
   font-weight: bold;
   color: white;
 }
 
-@media only screen and(max-width:1000px) {
-  .flex-container {
-    width: 100%;
-    padding: 0 12px;
-  }
+.flex-container {
+  display: flex;
+  max-width: 1400px;
+  min-width: 300px;
 }
 
-@media only screen and(max-width:1000px) {
-  .history-sidebar {
-    display: none;
-  }
-}
-@media only screen and(min-width:1000px) {
-  .flex-container {
-    max-width: 1000px;
-    width: 100%;
-    padding: 0 12px;
-  }
+.page-container {
+  position: relative;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
 }
