--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -25,7 +25,7 @@ body {
 }
 
 .title-font {
-  font-size: 2em;
+  font-size: 1em;
   font-weight: 500;
   margin: 10px 0;
 }
@@ -43,14 +43,44 @@ body {
   padding: 4vw;
 }
 
+.my-card {
+  margin: 1em 0;
+  .col {
+    vertical-align: middle;
+    margin: 10px;
+  }
+  .card-wrapper {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 100px;
+    white-space: nowrap;
+    margin-right: 10px;
+  }
+  .title {
+    font-size: 12px;
+    white-space: nowrap;
+    color: rgba(118, 114, 114, 0.87);
+  }
+  .under-title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 250px;
+    white-space: nowrap;
+  }
+}
+
+.orientation-portrait {
+  .my-card {
+    padding: 1em;
+  }
+}
+
 .stat-table {
   width: 100%;
 }
 
-@media only screen and(min-width:500px) {
-  .title-font {
-    font-size: 1em;
-  }
+@media only screen and(max-width:1040px) {
   .the-box {
     padding: 1em 2em;
     max-width: 500px;
@@ -59,14 +89,21 @@ body {
     max-width: 500px;
   }
 }
+@media only screen and(min-width:1040px) {
+  .the-box {
+    padding: 1em 2em;
+    max-width: 700px;
+  }
+  .stat-table {
+    max-width: 700px;
+  }
+}
 
 @media only screen and(max-width:500px) {
   .eng {
     display: none;
   }
-  .font-style {
-    font-size: 0.5em;
-  }
+
   .stat-table {
     max-width: 450px;
     width: 100%;
