--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -114,19 +114,6 @@ body {
   gap: 1em;
 }
 
-.content-sidebar {
-  display: flex;
-}
-
-.content-sidebar > *:nth-child(1) {
-  flex: 1 1 68%;
-}
-
-.content-sidebar > *:nth-child(2) {
-  flex: 1 1 32%;
-  height: 100%;
-  background: #ffffff;
-}
 #app {
   padding: 0 4em;
   #image-wrapper {
@@ -193,6 +180,26 @@ body {
   }
 }
 
+.content-sidebar {
+  display: flex;
+}
+
+.content-sidebar > *:nth-child(1) {
+  flex: 1 1 68%;
+}
+
+.content-sidebar > *:nth-child(2) {
+  flex: 1 1 32%;
+  height: fit-content;
+  background: #ffffff;
+}
+
+.label-tools {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .pages-header {
   font-size: 30px;
   font-weight: bold;
@@ -210,7 +217,9 @@ body {
   background: #2d7fcb;
   color: white;
   padding: 0.5em 1em;
-  font-size: 20px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
 
 .description {
@@ -252,7 +261,7 @@ body {
 
 .flex-container {
   display: flex;
-  max-width: 1400px;
+  max-width: 1440px;
   min-width: 300px;
 }
 
