--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,8 +2,7 @@
 
 html,
 body {
-  font-family: "Roboto", sans-serif;
-  background: #f5f5f5;
+  font-family: "Inter", sans-serif;
   height: 100%;
 }
 
@@ -25,7 +24,7 @@ body {
 }
 
 .title-font {
-  font-size: 1em;
+  font-size: 25px;
   font-weight: 500;
   margin: 10px 0;
 }
@@ -39,7 +38,7 @@ body {
 .the-box {
   border: solid 1px #d15eff;
   background: white;
-  width: 100%;
+
   padding: 4vw;
 }
 
@@ -116,7 +115,7 @@ body {
 
 .img-css {
   .outer-img-wrapper {
-    margin-top: 2em;
+    padding: 2em;
     width: 80%;
     height: fit-content;
     color: rgb(0, 0, 0);
@@ -243,6 +242,7 @@ body {
 
 .content-sidebar {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .content-sidebar > *:nth-child(1) {
@@ -253,6 +253,7 @@ body {
   flex: 1 1 30%;
   height: fit-content;
   background: #ffffff;
+  min-width: 350px;
 }
 
 .label-tools {
@@ -321,8 +322,7 @@ body {
 
 .flex-container {
   display: flex;
-  max-width: 1600px;
-  min-width: 300px;
+  max-width: 1440px;
 }
 
 .page-container {
@@ -355,6 +355,79 @@ body {
   .project-card-list {
     .project-card {
       min-width: 300px;
+    }
+  }
+}
+
+.wrap-flex {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 2em;
+  gap: 2em;
+}
+
+.wrap-block {
+  display: block;
+  flex-wrap: wrap;
+  padding: 0 2em;
+  gap: 2em;
+}
+
+@media (max-width: 967px) and (max-height: 415px) {
+  .wrap-flex {
+    display: block;
+    flex-wrap: wrap;
+  }
+}
+.main-profile-box {
+  .main-box-title {
+    font-weight: 600;
+    font-size: 25px;
+  }
+  .rows-header {
+    color: #149bfc;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .profile-wrap {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .profile-wrap > * {
+    flex: 0 1 50%;
+  }
+  @media only screen and(max-width:512px) {
+    .profile-wrap > * {
+      flex: 0 1 100%;
+    }
+  }
+}
+
+.sub-profile-box {
+  .sub-box-title {
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 25px;
+  }
+  .columns-header {
+    text-align: center;
+    color: #5f5f5f;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .columns-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #7a7a7a;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  @media only screen and(max-width:1000px) {
+    .operation-overflow {
+      width: 600px;
     }
   }
 }
