--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -113,27 +113,54 @@ body {
   gap: 1em;
 }
 
-.img-css {
-  .outer-img-wrapper {
-    padding: 2em;
-    width: 80%;
-    height: fit-content;
-    color: rgb(0, 0, 0);
-    border-radius: 5px;
-  }
+.content-sidebar {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+}
 
-  img {
-    position: absolute;
-    height: 100%;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    max-width: 100%;
+@media (min-height: 1000px) and (max-width: 1024px) {
+  .content-sidebar {
+    display: block;
+    flex-wrap: wrap;
+    height: 100vh;
   }
+  .content-sidebar > *:nth-child(1) {
+    background: #ffffff;
+  }
+}
 
-  .inner-img-wrapper {
-    position: relative;
-    padding-bottom: 75%;
+.content-sidebar > *:nth-child(1) {
+  flex: 1 1 75%;
+  background: #f5f5f5;
+}
+
+.content-sidebar > *:nth-child(2) {
+  flex: 1 1 25%;
+  background: #fdfdfd;
+  min-width: 256px;
+}
+
+.img-wrapper {
+  position: relative;
+  .img-bg-s {
+    width: 100%;
+    height: 50vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .img-bg {
+    width: 100%;
+    height: 75vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  @media only screen and(max-width:1400px) {
+    .img-bg {
+      width: 90%;
+    }
   }
 }
 
@@ -144,10 +171,16 @@ body {
     background-size: contain;
     position: relative;
   }
-  @media only screen and(min-width:1920px) {
+  @media only screen and(min-width:2560px) {
     #image-wrapper {
-      width: 1152px;
-      height: 648px;
+      width: 1536px;
+      height: 864px;
+    }
+  }
+  @media only screen and(max-width:2560px) {
+    #image-wrapper {
+      width: 1536px;
+      height: 864px;
     }
   }
   @media only screen and(max-width:1920px) {
@@ -212,12 +245,13 @@ body {
   align-items: center;
 }
 .label-overflow {
-  max-height: 300px;
+  max-height: 450px;
   min-height: 200px;
   overflow: auto;
 
   ::-webkit-scrollbar {
     width: 0;
+    margin: 2em;
   }
 }
 
@@ -240,26 +274,71 @@ body {
   background-size: 100% 3px;
 }
 
-.content-sidebar {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.content-sidebar > *:nth-child(1) {
-  flex: 1 1 70%;
-}
-
-.content-sidebar > *:nth-child(2) {
-  flex: 1 1 30%;
-  height: fit-content;
-  background: #ffffff;
-  min-width: 350px;
-}
-
 .label-tools {
+  padding: 30px 2em;
   position: relative;
   width: 100%;
   height: 100%;
+
+  .sidebar-header {
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
+  }
+
+  .doc-btn {
+    animation: MoveUpDown 1.5s linear infinite;
+    position: absolute;
+    right: 0;
+    bottom: -7px;
+    .doc-icon {
+      border-radius: 5px;
+      width: 40px;
+      height: 40px;
+    }
+  }
+  @keyframes MoveUpDown {
+    0%,
+    100% {
+      bottom: 7px;
+    }
+    50% {
+      bottom: -7px;
+    }
+  }
+  .sidebar-desc {
+    font: size 14px;
+    color: #7a7a7a;
+  }
+
+  .act-perform-bar-l {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background: #535353;
+    width: 250px;
+    position: absolute;
+    padding: 15px;
+    left: -20px;
+    margin-top: 1em;
+  }
+  .act-perform-bar-p {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background: #535353;
+    width: 250px;
+    position: absolute;
+    padding: 15px;
+    left: 0;
+    margin-top: 1em;
+  }
+
+  .label-sec {
+    margin-top: 95px;
+  }
 }
 
 .pages-header {
@@ -268,43 +347,6 @@ body {
   color: #3d3142;
 }
 
-.history-sidebar {
-  background: #fff;
-  max-width: 300px;
-  width: 280px;
-  height: 100vh;
-}
-
-.document-crop {
-  background: #2d7fcb;
-  color: white;
-  padding: 0.5em 1em;
-  width: 100%;
-  bottom: 0;
-}
-
-.description {
-  padding: 1em 2em;
-  color: white;
-}
-
-.description-crop {
-  background: #fff;
-  padding: 0.5em 1em;
-  font-size: 20px;
-}
-
-.sub-header-crop {
-  color: #918fd1;
-  font-size: 20px;
-  padding: 0.5em 1em;
-}
-.header-crop {
-  padding: 1em;
-  width: 100%;
-  flex-wrap: nowrap;
-  background: #d15eff;
-}
 .circle {
   width: 10px;
   height: 10px;
@@ -312,12 +354,6 @@ body {
   background: #fff;
   margin: 0 2px;
   box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-.header {
-  font-size: 1.5em;
-  font-weight: bold;
-  color: white;
 }
 
 .flex-container {
