--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -467,3 +467,146 @@ body {
     }
   }
 }
+
+//login css
+.google-btn {
+  font-family: Inter, Arial, sans-serif;
+  color: #888888;
+  font-size: 14px;
+  width: 100%;
+  background: #fff;
+}
+
+.top-section {
+  font-weight: bold;
+  font-size: calc(10px + 1vw);
+}
+
+.sub-top-section {
+  color: #888888;
+  font-size: 13px;
+}
+
+.or {
+  margin: 0 1em;
+  font-weight: Bold;
+  font-size: 20px;
+  color: #888888;
+}
+
+.-or- {
+  height: 30px;
+  padding-bottom: 10px;
+  width: 100%;
+  margin: 20px auto;
+  float: left;
+}
+
+.-or-:after {
+  content: "";
+  display: block;
+  margin-top: 15px;
+  border-bottom: 2px solid #888888;
+}
+.signin-btn {
+  font-family: Inter, Arial, sans-serif;
+  font-size: 14px;
+  color: white;
+  background: #149bfc;
+  width: 100%;
+}
+
+.signup-btn {
+  font-size: 14px;
+  color: #149bfc;
+}
+
+@keyframes showTopText {
+  0% {
+    transform: translate3d(0, 100%, 0);
+  }
+  40%,
+  60% {
+    transform: translate3d(0, 60%, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes showBottomText {
+  0% {
+    transform: translate3d(0, -100%, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+.animated-title {
+  color: #fff;
+  font-family: Inter, Arial, sans-serif;
+  height: 100%;
+  left: 70%;
+  top: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+.animated-title > div {
+  height: 50%;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+.animated-title > div div {
+  font-size: 2vw;
+  padding: 2vmin 0;
+  position: absolute;
+}
+.animated-title > div div span {
+  display: block;
+}
+.animated-title > div.text-top {
+  border-bottom: 5px solid #a4da6f;
+  border-radius: 1px;
+  width: 40vw;
+  top: 0;
+}
+.animated-title > div.text-top div {
+  animation: showTopText 1s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+  bottom: 0;
+  transform: translate(0, 100%);
+}
+.animated-title > div.text-top div span:first-child {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.43);
+  color: linear(red, blue);
+  font-weight: 500;
+}
+.animated-title > div.text-top div span:nth-child(2) {
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+  color: #fff;
+  font-weight: bold;
+  font-size: 5vw;
+}
+.animated-title > div.text-bottom {
+  bottom: 0;
+  align-items: baseline;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.43);
+}
+.animated-title > div.text-bottom div {
+  animation: showBottomText 0.5s;
+  animation-delay: 1.75s;
+  animation-fill-mode: forwards;
+  top: 0;
+  transform: translate(0, -100%);
+  display: inline;
+}
+
+.login-img {
+  height: 100vh;
+  background-image: url("/images/loginImg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
