--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -119,13 +119,15 @@ body {
   height: 100vh;
 }
 .content-sidebar-60 > *:nth-child(1) {
+  z-index: 1;
   flex: 1 1 60%;
-  background: #f5f5f5;
+  background: #ffffff;
 }
 
 .content-sidebar-60 > *:nth-child(2) {
+  z-index: 99;
   flex: 1 1 40%;
-  background: #fdfdfd;
+  background: #ffffff;
   min-width: 256px;
 }
 
@@ -146,11 +148,13 @@ body {
 }
 
 .content-sidebar > *:nth-child(1) {
+  z-index: 1;
   flex: 1 1 75%;
   background: #f5f5f5;
 }
 
 .content-sidebar > *:nth-child(2) {
+  z-index: 99;
   flex: 1 1 25%;
   background: #fdfdfd;
   min-width: 256px;
@@ -523,6 +527,7 @@ body {
   }
 }
 .animated-title {
+  z-index: 1;
   color: #fff;
   font-family: Inter, Arial, sans-serif;
   height: 100%;
