--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap");
 
 html,
 body {
-  font-family: "Mitr", sans-serif;
+  font-family: "Inter", sans-serif;
   height: 100%;
 }
 
